--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <title> My first landing page design</title>
     </head>
     <body>
-
+        <div class="header">
+            <div>Header Logo</div>
+            <div class="">
+                <ul>
+                    <li><a href="@">header link one</a></li>
+                    <li><a href="@">header link two</a></li>
+                    <li><a href="@">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="body1">
+        </div>
     </body>
 </html>
