Header and first body finished even with style

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             </div>
         </div>
         <div class="body1">
+            <div class="main_l_1">
+                <div class="header_l_1">This website is awesome</div>
+                <div class="text_l_1">This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</div>
+                <button class="continue_l_1">Sign up</button>
+            </div>
+            <div class="main_r_1">
+                <div class="text_r_1">This is a place holder for an image</div>
+            </div>
         </div>
     </body>
 </html>
