--- a/index.html
+++ b/index.html
@@ -26,5 +26,26 @@
                 <div class="text_r_1">This is a place holder for an image</div>
             </div>
         </div>
+        <div class="body2">
+            <div class="header2">Some random information</div>
+            <div class="main2">
+                <div class="box2">
+                    <div class="frame2"> </div>
+                    <div class="text2">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="box2">
+                    <div class="frame2"> </div>
+                    <div class="text2">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="box2">
+                    <div class="frame2"> </div>
+                    <div class="text2">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="box2">
+                    <div class="frame2"> </div>
+                    <div class="text2">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
