Body 3 completed and little on Body4

--- a/index.html
+++ b/index.html
@@ -30,21 +30,31 @@
             <div class="header2">Some random information</div>
             <div class="main2">
                 <div class="box2">
-                    <div class="frame2"> </div>
+                    <div class="frame2">&nbsp</div>
                     <div class="text2">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="box2">
-                    <div class="frame2"> </div>
+                    <div class="frame2">&nbsp</div>
                     <div class="text2">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="box2">
-                    <div class="frame2"> </div>
+                    <div class="frame2">&nbsp</div>
                     <div class="text2">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="box2">
-                    <div class="frame2"> </div>
+                    <div class="frame2">&nbsp</div>
                     <div class="text2">this is some subtext under an illustration or image</div>
                 </div>
+            </div>
+        </div>
+        <div class="body3">
+            <div class="text3"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </div>
+            <div class="author3">-Thor, God of Thunder</div>
+        </div>
+        <div class="body4">
+            <div class="main4">
+                <div class="text4up">Call to action! It's time!</div>
+                <div class="text4down">Sign up for our product by clicking that button right over there!</div>
             </div>
         </div>
     </body>
