Footer completed, still button and boxes need a solution

--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
                     <div class="text4up">Call to action! It's time!</div>
                     <div class="text4down">Sign up for our product by clicking that button right over there!</div>
                 </div>
-                <button class="button4"> Sign up</button>
+                <div class="mainright4">
+                    <button class="button4"> Sign up</button>
+                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="textfooter"> Copyright © Dani Baena 2022</div>
         </div>
     </body>
 </html>
